--- a/blog/templates/blogs/index.html
+++ b/blog/templates/blogs/index.html
@@ -8,15 +8,16 @@ My Blog
 {% block css_files %}
   <link rel="stylesheet" href="{% static "blogs/post.css" %}" />
   <link rel="stylesheet" href="{% static "blogs/index.css" %}" />
+  
 {% endblock %}
 
 {% block content %}
 <section id="welcome">
   <header>
     <img src="https://www.shutterstock.com/image-photo/young-hikers-small-backpacks-walks-260nw-2157450543.jpg" alt="Max - The Author Of This Blog" />
-    <h2>MAXIMILIAN'S BLOG</h2>
+    <h2>SUMIT'S BLOG</h2>
   </header>
-  <p>Hi, I am Max and I love to blog about tech and the world!</p>
+  <p>Hi, I am Sumit and I love to blog about tech and the world!</p>
 </section>
 
 <section id="latest-posts">
@@ -32,12 +33,10 @@ My Blog
 <section id="about">
   <h2>What I Do</h2>
   <p>
-    I love programming, I love to help others and I enjoy exploring new
-    technologies in general!
+    I love programming, I am a Software Developer!
   </p>
   <p>
-    My goal is to keep on growing as a developer - and if I could help you do
-    the same, I'd be very happy!
+    My goal is to keep on growing as a developer.
   </p>
 </section>
 {% endblock %}
